--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^4.5.0",
+    "bootstrap-vue": "^2.14.0",
     "core-js": "^3.6.4",
     "leaflet": "^1.6.0",
     "leaflet-draw": "^1.0.4",
     "leaflet.markercluster": "^1.4.1",
     "lodash": "^4.17.15",
     "nprogress": "^0.2.0",
-    "vue": "^2.6.10",
+    "vue": "^2.6.11",
     "vue-router": "^3.1.6",
     "vuejs-datepicker": "^1.6.2",
     "vuex": "^3.1.3"
