--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lodash": "^4.17.15",
     "nprogress": "^0.2.0",
     "vue": "^2.6.11",
+    "vue-progressbar": "^0.7.5",
     "vue-router": "^3.1.6",
     "vuejs-datepicker": "^1.6.2",
     "vuex": "^3.1.3"
