--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue": "^2.6.11",
     "vue-progressbar": "^0.7.5",
     "vue-router": "^3.1.6",
+    "vue2-editor": "^2.10.2",
     "vuejs-datepicker": "^1.6.2",
     "vuex": "^3.1.3"
   },
