--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nprogress": "^0.2.0",
     "vue": "^2.6.11",
     "vue-progressbar": "^0.7.5",
+    "vue-radar": "^0.1.5",
     "vue-router": "^3.1.6",
     "vue2-editor": "^2.10.2",
     "vuejs-datepicker": "^1.6.2",
