--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lodash": "^4.17.15",
     "nprogress": "^0.2.0",
     "vue": "^2.6.11",
+    "vue-localforage": "^0.2.5",
     "vue-progressbar": "^0.7.5",
     "vue-radar": "^0.1.5",
     "vue-router": "^3.1.6",
